--- a/project.html
+++ b/project.html
@@ -141,11 +141,7 @@
 		<!-- bloglist -->
 		<section class="blog-list-container">
 			<h1>MY PROJECT</h1>
-			<div class="blog-card-container" id="blog-container">
-				<!-- CARD -->
-
-				<!-- /CARD -->
-			</div>
+			<div class="blog-card-container" id="blog-container"></div>
 		</section>
 	</body>
 	<script src="/js/project.js"></script>
